Added value object

--- a/micrograd_scratch.ipynb
+++ b/micrograd_scratch.ipynb
@@ -153,16 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=-6.0)"
+       "Value(data=4.0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,8 +170,10 @@
    "source": [
     "class Value:\n",
     "    \n",
-    "    def __init__(self, data):\n",
+    "    def __init__(self, data, _children=(), _op=''):\n",
     "        self.data = data\n",
+    "        self._prev = set(_children)\n",
+    "        self._op = _op\n",
     "    \n",
     "    # Overrides representation of object for printing instead of printing memory address\n",
     "    def __repr__(self) -> str: \n",
@@ -179,25 +181,59 @@
     "    \n",
     "    # Overrides addition between to objects of the same type\n",
     "    def __add__(self, other):\n",
-    "        out = Value(self.data + other.data)\n",
+    "        out = Value(self.data + other.data, (self, other), '+')\n",
     "        return out\n",
     "\n",
     "    # Overrides multiplication between to objects of the same type\n",
     "    def __mul__(self, other):\n",
-    "        out = Value(self.data * other.data)\n",
+    "        out = Value(self.data * other.data, (self, other), '*')\n",
     "        return out    \n",
     "    \n",
     "a = Value(2.0)\n",
     "b = Value(-3.0)\n",
     "c = Value(10.0)\n",
-    "a * b"
+    "d = a*b + c\n",
+    "d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'+'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d._prev\n",
+    "d._op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'graphviz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgraphviz\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Digraph\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'graphviz'"
+     ]
+    }
+   ],
    "source": []
   }
  ],
