--- a/micrograd_scratch.ipynb
+++ b/micrograd_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "20"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1eea6166f90>]"
+       "[<matplotlib.lines.Line2D at 0x23cb24825a0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -153,16 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Value(data=4.0)"
+       "Value(data=-8.0)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,10 +170,11 @@
    "source": [
     "class Value:\n",
     "    \n",
-    "    def __init__(self, data, _children=(), _op=''):\n",
+    "    def __init__(self, data, _children=(), _op='', label=''):\n",
     "        self.data = data\n",
     "        self._prev = set(_children)\n",
     "        self._op = _op\n",
+    "        self.label = label\n",
     "    \n",
     "    # Overrides representation of object for printing instead of printing memory address\n",
     "    def __repr__(self) -> str: \n",
@@ -189,16 +190,19 @@
     "        out = Value(self.data * other.data, (self, other), '*')\n",
     "        return out    \n",
     "    \n",
-    "a = Value(2.0)\n",
-    "b = Value(-3.0)\n",
-    "c = Value(10.0)\n",
-    "d = a*b + c\n",
-    "d"
+    "a = Value(2.0, label='a')\n",
+    "b = Value(-3.0, label='b')\n",
+    "c = Value(10.0, label='c')\n",
+    "e = a*b; e.label = 'e'\n",
+    "d = e + c; d.label = 'd'\n",
+    "f = Value(-2.0, label='f')\n",
+    "L = d * f; L.label = 'L'\n",
+    "L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +211,7 @@
        "'+'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,21 +223,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graphviz import Digraph\n",
+    "\n",
+    "def trace(root):\n",
+    "    # builds a set of all nodes and edges in a graph\n",
+    "    nodes, edges = set(), set()\n",
+    "    def build(v):\n",
+    "        if v not in nodes:\n",
+    "            nodes.add(v)\n",
+    "            for child in v._prev:\n",
+    "                edges.add((child, v))\n",
+    "                build(child)\n",
+    "    build(root)\n",
+    "    return nodes, edges\n",
+    "\n",
+    "def draw_dot(root):\n",
+    "    dot = Digraph(format='svg', graph_attr={'rankdir': 'LR'}) # LR = left to right\n",
+    "\n",
+    "    nodes, edges = trace(root)\n",
+    "    for n in nodes:\n",
+    "        uid = str(id(n))\n",
+    "        # for any value in the graph, create a rectangular ('record\") node for it\n",
+    "        dot.node(name = uid, label = \"{ %s | data %.4f }\" % (n.label, n.data, ), shape='record')\n",
+    "        if n._op:\n",
+    "            # if this values is a result of some operation, create an op node for it\n",
+    "            dot.node(name = uid + n._op, label = n._op)\n",
+    "            # and connect this node to it\n",
+    "            dot.edge(uid + n._op, uid)\n",
+    "\n",
+    "    for n1, n2 in edges:\n",
+    "        # connect n1 to the op node of n2\n",
+    "        dot.edge(str(id(n1)), str(id(n2)) + n2._op)\n",
+    "    \n",
+    "    return dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'graphviz'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgraphviz\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Digraph\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'graphviz'"
-     ]
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.46.0 (20210118.1747)\n",
+       " -->\n",
+       "<!-- Pages: 1 -->\n",
+       "<svg width=\"586pt\" height=\"128pt\"\n",
+       " viewBox=\"0.00 0.00 586.00 128.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 124)\">\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-124 582,-124 582,4 -4,4\"/>\n",
+       "<!-- 2459712738304 -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>2459712738304</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"473,-27.5 473,-63.5 578,-63.5 578,-27.5 473,-27.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"485\" y=\"-41.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">d</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"497,-27.5 497,-63.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"537.5\" y=\"-41.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">data 4.0000</text>\n",
+       "</g>\n",
+       "<!-- 2459712738304+ -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>2459712738304+</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"410\" cy=\"-45.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"410\" y=\"-41.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">+</text>\n",
+       "</g>\n",
+       "<!-- 2459712738304+&#45;&gt;2459712738304 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>2459712738304+&#45;&gt;2459712738304</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M437.04,-45.5C444.74,-45.5 453.53,-45.5 462.49,-45.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"462.63,-49 472.63,-45.5 462.63,-42 462.63,-49\"/>\n",
+       "</g>\n",
+       "<!-- 2459712738352 -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>2459712738352</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"237,-55.5 237,-91.5 346,-91.5 346,-55.5 237,-55.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"248.5\" y=\"-69.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">e</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"260,-55.5 260,-91.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"303\" y=\"-69.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">data &#45;6.0000</text>\n",
+       "</g>\n",
+       "<!-- 2459712738352&#45;&gt;2459712738304+ -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>2459712738352&#45;&gt;2459712738304+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M346.32,-60.57C355.83,-58.28 365.5,-55.95 374.31,-53.84\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"375.28,-57.2 384.19,-51.46 373.65,-50.4 375.28,-57.2\"/>\n",
+       "</g>\n",
+       "<!-- 2459712738352* -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>2459712738352*</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"173\" cy=\"-73.5\" rx=\"27\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"173\" y=\"-69.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">*</text>\n",
+       "</g>\n",
+       "<!-- 2459712738352*&#45;&gt;2459712738352 -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>2459712738352*&#45;&gt;2459712738352</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M200.14,-73.5C208.13,-73.5 217.28,-73.5 226.62,-73.5\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"226.79,-77 236.79,-73.5 226.79,-70 226.79,-77\"/>\n",
+       "</g>\n",
+       "<!-- 2459712366704 -->\n",
+       "<g id=\"node5\" class=\"node\">\n",
+       "<title>2459712366704</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"3,-83.5 3,-119.5 107,-119.5 107,-83.5 3,-83.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"14.5\" y=\"-97.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">a</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"26,-83.5 26,-119.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"66.5\" y=\"-97.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">data 2.0000</text>\n",
+       "</g>\n",
+       "<!-- 2459712366704&#45;&gt;2459712738352* -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>2459712366704&#45;&gt;2459712738352*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M107.22,-89.14C117.47,-86.66 128.01,-84.12 137.53,-81.82\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"138.5,-85.19 147.39,-79.44 136.85,-78.38 138.5,-85.19\"/>\n",
+       "</g>\n",
+       "<!-- 2459712735616 -->\n",
+       "<g id=\"node6\" class=\"node\">\n",
+       "<title>2459712735616</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"236,-0.5 236,-36.5 347,-36.5 347,-0.5 236,-0.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"247.5\" y=\"-14.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">c</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"259,-0.5 259,-36.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"303\" y=\"-14.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">data 10.0000</text>\n",
+       "</g>\n",
+       "<!-- 2459712735616&#45;&gt;2459712738304+ -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>2459712735616&#45;&gt;2459712738304+</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M347.34,-31.21C356.57,-33.35 365.91,-35.51 374.44,-37.49\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"373.85,-40.95 384.38,-39.79 375.43,-34.13 373.85,-40.95\"/>\n",
+       "</g>\n",
+       "<!-- 2459703405040 -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>2459703405040</title>\n",
+       "<polygon fill=\"none\" stroke=\"black\" points=\"0,-28.5 0,-64.5 110,-64.5 110,-28.5 0,-28.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"12\" y=\"-42.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">b</text>\n",
+       "<polyline fill=\"none\" stroke=\"black\" points=\"24,-28.5 24,-64.5 \"/>\n",
+       "<text text-anchor=\"middle\" x=\"67\" y=\"-42.8\" font-family=\"Times New Roman,serif\" font-size=\"14.00\">data &#45;3.0000</text>\n",
+       "</g>\n",
+       "<!-- 2459703405040&#45;&gt;2459712738352* -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>2459703405040&#45;&gt;2459712738352*</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.26,-59.13C119.49,-61.28 128.84,-63.45 137.37,-65.44\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"136.79,-68.9 147.32,-67.76 138.38,-62.08 136.79,-68.9\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.graphs.Digraph at 0x23cb2480b30>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "draw_dot(L)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -253,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
