--- a/micrograd_scratch.ipynb
+++ b/micrograd_scratch.ipynb
@@ -1166,33 +1166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.013716022207991807\n",
-      "1 0.013585894473933298\n",
-      "2 0.013457969346879874\n",
-      "3 0.013332193954337001\n",
-      "4 0.013208517055066647\n",
-      "5 0.013086888977867611\n",
-      "6 0.012967261563053625\n",
-      "7 0.012849588106493103\n",
-      "8 0.012733823306081728\n",
-      "9 0.012619923210526966\n",
-      "10 0.012507845170329858\n",
-      "11 0.012397547790856854\n",
-      "12 0.012288990887397863\n",
-      "13 0.012182135442116285\n",
-      "14 0.012076943562797985\n",
-      "15 0.011973378443314114\n",
-      "16 0.011871404325715726\n",
-      "17 0.011770986463882829\n",
-      "18 0.011672091088655346\n",
-      "19 0.011574685374376233\n"
+      "0 0.004667549164068691\n",
+      "1 0.004630878162994168\n",
+      "2 0.004594734653658924\n",
+      "3 0.00455910771489398\n",
+      "4 0.004523986718983225\n",
+      "5 0.004489361322005441\n",
+      "6 0.004455221454551169\n",
+      "7 0.004421557312798205\n",
+      "8 0.004388359349929506\n",
+      "9 0.004355618267878525\n",
+      "10 0.004323325009387525\n",
+      "11 0.004291470750365277\n",
+      "12 0.00426004689253112\n",
+      "13 0.004229045056333121\n",
+      "14 0.004198457074128315\n",
+      "15 0.0041682749836142756\n",
+      "16 0.004138491021501109\n",
+      "17 0.004109097617413534\n",
+      "18 0.004080087388014018\n",
+      "19 0.004051453131337103\n"
      ]
     }
    ],
@@ -1244,7 +1244,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# How do you design neural networks??\n",
+    "# Batching is when a randomly chosen set of parameters is forward and back propagated through, instead of everything\n",
+    "# How does batching work?"
+   ]
   }
  ],
  "metadata": {
